# travel-assistant-hackthan

./: .env  .env.example  .gitignore  ARCHITECTURE_GUIDE.md  ARCHITECTURE_UPDATE.md  CHECKLIST.md  GUARDRAILS_IMPLEMENTATION.md  IMPLEMENTATION.md  POLICY_SUMMARY.md  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  SETUP_INSTRUCTIONS.md  STATUS.md  SYSTEM_FEATURES.md  TESTING_GUIDE.md  agent.py  app.py  architecture.py  create_policy.py  generate_token.py  main.py  pyproject.toml  requirements.txt  run_setup.sh  setup.py  start_servers.py  test_scenarios.py  test_workflow.py
data/: user_embeddings.npy  user_memories.json
data/vector_store/faiss_index/: index.faiss  index.pkl
src/: __init__.py  config.py  workflow.py
src/nodes/: __init__.py  information.py  intent_classification.py  itinerary.py  state.py  support_trip.py  travel_plan.py  user_input.py  user_selection.py
src/utils/: guardrails.py  langfuse_manager.py  logger.py  mem0_manager.py  multimodel_manager.py  multimodel_selector.py  rag_manager.py  tempguardrails.py
