[project]
name = "travel-assistant-hackthan"
version = "0.1.0"
description = "AI-powered travel assistant with LangGraph, RAG, and Mem0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "google-generativeai>=0.3.0",
    "mem0ai>=0.1.0",
    "redis>=5.0.0",
    "pypdf>=4.0.0",
    "streamlit>=1.39.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "qdrant-client>=1.7.0",
    "langchain-qdrant>=0.1.0",
    "reportlab>=4.0.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=9.0.1",
]
